--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iFoundAnApple - Lost & Found for Apple Devices</title>
+    
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" 
+          content="default-src 'self'; 
+                   script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://esm.sh; 
+                   style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; 
+                   connect-src 'self' https://*.supabase.co https://generativelanguage.googleapis.com; 
+                   img-src 'self' data: https:; 
+                   font-src 'self' https:;">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
